# rsexamples

./: Cargo.toml  README.md
attribute_macro/: Cargo.toml
attribute_macro/src/: lib.rs
attribute_macro/tests/: attribute.rs
declarative_macro/: Cargo.toml
declarative_macro/examples/: add.rs  ok_or_return.rs
declarative_macro/src/: lib.rs
derive_macro/: Cargo.toml
derive_macro/src/: lib.rs
examples/: macro.rs
function_macro/: Cargo.toml
function_macro/src/: lib.rs
trait_ph/: Cargo.toml
trait_ph/src/: lib.rs
